--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,12 @@ annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.1
 bcrypt==4.0.1
+cffi==2.0.0
 click==8.3.1
+cryptography==46.0.4
+dnspython==2.8.0
+ecdsa==0.19.1
+email-validator==2.3.0
 exceptiongroup==1.3.1
 fastapi==0.128.0
 greenlet==3.3.1
@@ -13,11 +18,16 @@ Mako==1.3.10
 MarkupSafe==3.0.3
 passlib==1.7.4
 psycopg2-binary==2.9.11
+pyasn1==0.6.2
+pycparser==3.0
 pydantic==2.12.5
 pydantic-settings==2.12.0
 pydantic_core==2.41.5
 python-dotenv==1.2.1
+python-jose==3.5.0
 python-multipart==0.0.22
+rsa==4.9.1
+six==1.17.0
 SQLAlchemy==2.0.46
 starlette==0.50.0
 tomli==2.4.0
